fix overflow bug

--- a/internal/frontend/src/styles/app.css
+++ b/internal/frontend/src/styles/app.css
@@ -139,6 +139,7 @@ html,
 body,
 #root {
   height: 100%;
+  overflow: hidden;
 }
 
 * {
